toList refactor